--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "express-session": "^1.17.2",
     "express-useragent": "^1.0.15",
     "method-override": "^3.0.0",
+    "multer": "^1.4.4",
     "mysql2": "^2.3.3",
+    "node-thumbnail": "^0.15.0",
     "serve-favicon": "^2.5.0",
     "serve-static": "^1.14.2",
     "winston": "^3.5.1",
